Solved the Operators Alignment Issue.

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
     width: 80px;
     text-align: center;
     padding: 10px;
-    margin: 20px 4px 10px 0;
+    margin: 20px 3px 10px 0;
     cursor: pointer;
     background-color: #ddd;
     transition: border-color .2s ease-in-out, background-color .2s, box-shadow .2s;
